--- a/src/index.css
+++ b/src/index.css
@@ -1,11 +1,13 @@
 body {
-  background-color: rgb(202, 44, 155);
+  background-color: rgb(236, 76, 138);
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 .App {
   padding: 0;
   margin: 0;
-  background-color: rgb(202, 44, 155);
+  background-color: rgb(245, 74, 137);
+  height: max-content;
 }
 
 .headline {
@@ -14,34 +16,101 @@ body {
   text-align: center;
   margin-top: 0;
   margin-bottom: 10px;
+  background-color: rgb(230, 79, 145);
+  padding-top: 1.5em;
+  padding-bottom: 1.5em;
 }
 
 .data {
   display: grid;
-  grid-template-columns: repeat(3, minmax(33.33%, 1fr));
-  grid-auto-rows: 8%;
+  grid-template-columns: repeat(2, minmax(50%, 1fr));
+  grid-auto-rows: 40%;
   align-items: center;
   justify-content: center;
   width: 100%;
-  border-top: 1px solid #cff;
+  height: max-content;
 }
 
-.itemSpan {
-  position: absolute;
-  top: 50%;
-  font-size: x-small;
-  color: rgb(171, 198, 219);
-  gap: 10px;
-}
-
-.colDiv:nth-child(odd) {
-  background-color: rgb(202, 44, 155);
+.colDiv:nth-child(1) {
+  background-color: rgba(175, 25, 130, 0.4);
   width: 100%;
   height: 100%;
 }
 
-.colDiv:nth-child(even) {
-  background-color: rgb(172, 40, 117);
+.colDiv:nth-child(2) {
+  background-color: rgb(232, 72, 134);
+  width: 100%;
+  height: 100%;
+}
+
+.colDiv:nth-child(4) {
+  background-color: rgba(175, 25, 130, 0.4);
+  width: 100%;
+  height: 100%;
+}
+
+.colDiv:nth-child(3) {
+  background-color: rgb(232, 72, 134);
+  width: 100%;
+  height: 100%;
+}
+
+.colDiv:nth-child(5) {
+  background-color: rgb(217, 55, 134);
+  width: 100%;
+  height: 100%;
+}
+
+.colDiv:nth-child(6) {
+  background-color: rgb(232, 72, 134);
+  width: 100%;
+  height: 100%;
+}
+
+.colDiv:nth-child(8) {
+  background-color: rgb(217, 55, 134);
+  width: 100%;
+  height: 100%;
+}
+
+.colDiv:nth-child(7) {
+  background-color: rgb(232, 72, 134);
+  width: 100%;
+  height: 100%;
+}
+
+.colDiv:nth-child(9) {
+  background-color: rgb(217, 55, 134);
+  width: 100%;
+  height: 100%;
+}
+
+.colDiv:nth-child(10) {
+  background-color: rgb(232, 72, 134);
+  width: 100%;
+  height: 100%;
+}
+
+.colDiv:nth-child(12) {
+  background-color: rgb(217, 55, 134);
+  width: 100%;
+  height: 100%;
+}
+
+.colDiv:nth-child(11) {
+  background-color: rgb(232, 72, 134);
+  width: 100%;
+  height: 100%;
+}
+
+.colDiv:nth-child(13) {
+  background-color: rgb(217, 55, 134);
+  width: 100%;
+  height: 100%;
+}
+
+.colDiv:nth-child(14) {
+  background-color: rgb(232, 72, 134);
   width: 100%;
   height: 100%;
 }
@@ -83,14 +152,14 @@ body {
   padding: 0;
   margin: 0;
   color: #fff;
-  height: 5em;
+  height: 6em;
   display: flex;
   justify-content: space-around;
   align-items: center;
 }
 
 .allDetails p:nth-child(even) {
-  background-color: rgb(133, 42, 42);
+  background-color: rgb(207, 66, 119);
 }
 
 .symbolName {
@@ -99,17 +168,17 @@ body {
   align-items: flex-end;
   justify-content: center;
   width: 100%;
-  background-color: saddlebrown;
+  background-color: rgb(220, 79, 145);
   color: #fff;
   height: 6em;
   margin: 0;
   font-size: 38px;
   font-weight: bold;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
+  font-family: "Gill Sans", "Gill Sans MT", Calibri, "Trebuchet MS", sans-serif;
 }
 
 .selectedData {
-  background-color: rgba(175, 25, 130, 0.2);
+  background-color: rgba(175, 25, 130, 0.1);
 }
 
 .symbolName h3 {
@@ -118,15 +187,14 @@ body {
 
 .selectedData button {
   color: #fff;
-  background-color: rgb(202, 44, 155);
+  background: transparent;
   border: none;
   padding: 0;
-  margin: 0;
+  margin-left: 10px;
   font-size: 20px;
   font-weight: bold;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
   position: absolute;
-  top: 10px;
+  top: 1.5em;
 }
 
 @media screen and (max-width: 750px) {
@@ -135,28 +203,17 @@ body {
   }
 
   .allDetails p {
-    height: 3em;
+    height: 5em;
     display: flex;
   }
 
   .data {
-    display: flex;
-    width: 100%;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: repeat(2, minmax(33.33%, 1fr));
+    grid-auto-rows: 50%;
     align-items: center;
     justify-content: center;
-  }
-
-  .colDiv:nth-child(even) {
-    background-color: rgb(202, 44, 155);
     width: 100%;
-    height: 100%;
-  }
-
-  .colDiv:nth-child(odd) {
-    background-color: rgb(172, 40, 117);
-    width: 100%;
-    height: 100%;
   }
 
   .colDiv button {
@@ -170,5 +227,89 @@ body {
     color: #fff;
     justify-content: center;
     align-items: center;
+  }
+
+  .colDiv:nth-child(1) {
+    background-color: rgba(175, 25, 130, 0.4);
+    width: 100%;
+    height: 100%;
+  }
+
+  .colDiv:nth-child(2) {
+    background-color: rgb(232, 72, 134);
+    width: 100%;
+    height: 100%;
+  }
+
+  .colDiv:nth-child(4) {
+    background-color: rgba(175, 25, 130, 0.4);
+    width: 100%;
+    height: 100%;
+  }
+
+  .colDiv:nth-child(3) {
+    background-color: rgb(232, 72, 134);
+    width: 100%;
+    height: 100%;
+  }
+
+  .colDiv:nth-child(5) {
+    background-color: rgb(217, 55, 134);
+    width: 100%;
+    height: 100%;
+  }
+
+  .colDiv:nth-child(6) {
+    background-color: rgb(232, 72, 134);
+    width: 100%;
+    height: 100%;
+  }
+
+  .colDiv:nth-child(8) {
+    background-color: rgb(217, 55, 134);
+    width: 100%;
+    height: 100%;
+  }
+
+  .colDiv:nth-child(7) {
+    background-color: rgb(232, 72, 134);
+    width: 100%;
+    height: 100%;
+  }
+
+  .colDiv:nth-child(9) {
+    background-color: rgb(217, 55, 134);
+    width: 100%;
+    height: 100%;
+  }
+
+  .colDiv:nth-child(10) {
+    background-color: rgb(232, 72, 134);
+    width: 100%;
+    height: 100%;
+  }
+
+  .colDiv:nth-child(12) {
+    background-color: rgb(217, 55, 134);
+    width: 100%;
+    height: 100%;
+  }
+
+  .colDiv:nth-child(11) {
+    background-color: rgb(232, 72, 134);
+    width: 100%;
+    height: 100%;
+  }
+
+  .colDiv:nth-child(13) {
+    background-color: rgb(217, 55, 134);
+    width: 100%;
+    height: 100%;
+  }
+
+  .colDiv:nth-child(14) {
+    background-color: rgb(232, 72, 134);
+    width: 100%;
+    height: 100%;
   }
 }
